ARROW-2106: [Python] Add conversion for a series of datetime objects

Author: Uwe L. Korn <uwelk@xhochy.com>

Closes #1585 from xhochy/ARROW-2106 and squashes the following commits:

d8be4863 [Uwe L. Korn] ARROW-2106: [Python] Add conversion for a series of datetime objects